[project]
name = "memory-scramble-game"
version = "0.1.0"
description = "Professional Memory Scramble desktop game developed using Python and Pygame."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pygame>=2.6.1",
    "pytest>=9.0.3",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.flake8]
max-line-length = 88
exclude = [
    ".venv",
    "__pycache__",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
